# tee_test

./: CMakeLists.txt  main.c
